syntax = "proto3";

package com.betpawa.common.protomapper;
option java_multiple_files = true;

//https://developers.google.com/protocol-buffers/docs/proto3#scalar

message ScalarValueTypesProto {
    double doubleValue = 1;
    float floatValue = 2;
    int32 int32Value = 3;
    int64 int64Value = 4;
    uint32 uint32Value = 5;
    uint64 uint64Value = 6;
    sint32 sint32Value = 7;
    sint64 sint64Value = 8;
    fixed32 fixed32Value = 9;
    fixed64 fixed64Value = 10;
    sfixed32 sfixed32Value = 11;
    sfixed64 sfixed64Value = 12;
    bool boolValue = 13;
    string stringValue = 14;
    bytes bytesValue = 15;
}

message ScalarValueTypesAutoboxingProto {
    double doubleValue = 1;
    float floatValue = 2;
    int32 intValue = 3;
    int64 longValue = 4;
    uint32 uint32Value = 5;
    uint64 uint64Value = 6;
    sint32 sint32Value = 7;
    sint64 sint64Value = 8;
    fixed32 fixed32Value = 9;
    fixed64 fixed64Value = 10;
    sfixed32 sfixed32Value = 11;
    sfixed64 sfixed64Value = 12;
    bool boolValue = 13;
    string stringValue = 14;
    bytes bytesValue = 15;
}

message NestedFieldTypesProto {
    int32 field1 = 1;
    NestedMessageLevel1Proto field2 = 2;
}

message NestedMessageLevel1Proto {
    int32 field1 = 1;
    NestedMessageLevel2Proto field2 = 2;
}

message NestedMessageLevel2Proto {
    int32 field1 = 1;
    int32 field2 = 2;
}

message CompatibleFieldsProtoMixedCase {
    int32 field_case1 = 1;
    int32 fieldCase2 = 2;
    int32 FieldCase3 = 3;
}

message FinalFieldProto {
    int32 field1 = 1;
    int32 field2 = 2;
}

message StaticFieldProto {
    int32 field1 = 1;
    int32 field2 = 2;
}

message IncompatibleFieldsProto {
    int32 field1 = 1;
    int64 field2 = 2;
}

message CompatibleFieldsProto {
    int32 field1 = 1;
    int32 field2 = 2;
}

message MissingFieldsType {
    int32 field1 = 1;
    int32 field2 = 2;
}

message AnyProtoType {
}

message WrongProtoType {
}
